@@ -1,5 +1,5 @@
 #!/usr/bin/env python
-# $Id: Template.py,v 1.99 2002/09/16 03:44:31 hierro Exp $
+# $Id: Template.py,v 1.100 2002/09/16 03:57:13 hierro Exp $
 """Provides the core Template class for Cheetah
 See the docstring in __init__.py and the User's Guide for more information
 
@@ -8,12 +8,12 @@ Meta-Data
 Author: Tavis Rudd <tavis@calrudd.com>
 License: This software is released for unlimited distribution under the
          terms of the Python license.
-Version: $Revision: 1.99 $
+Version: $Revision: 1.100 $
 Start Date: 2001/03/30
-Last Revision Date: $Date: 2002/09/16 03:44:31 $
+Last Revision Date: $Date: 2002/09/16 03:57:13 $
 """ 
 __author__ = "Tavis Rudd <tavis@calrudd.com>"
-__revision__ = "$Revision: 1.99 $"[11:-2]
+__revision__ = "$Revision: 1.100 $"[11:-2]
 
 ##################################################
 ## DEPENDENCIES
@@ -226,6 +226,8 @@ class Template(SettingsManager, Servlet, WebInputMixin):
             moduleName='GenTemplate'
 
         self._fileMtime = None
+        self._fileDirName = None
+        self._fileBaseName = None
         if file and type(file) == StringType:
             file = self.serverSidePath(file)
             self._fileMtime = os.path.getmtime(file)
